--- a/lawn-basics/how-often-grass-should-be-mowed.html
+++ b/lawn-basics/how-often-grass-should-be-mowed.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Often Grass Should Be Mowed</title>
-  <meta name="description" content="Grass mowing frequency depends on growth rate, energy production, and stress levels, not calendar schedules or habit.">
+  <meta name="description" content="Mowing too often or not often enough both cause problems. Knowing what your lawn shows over time helps set a steady mowing rhythm.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="How Often Grass Should Be Mowed">
-  <meta property="og:description" content="Grass mowing frequency depends on growth rate, energy production, and stress levels, not calendar schedules or habit.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="How Often Grass Should Be Mowed">
+  <meta name="twitter:description" content="Mowing too often or not often enough both cause problems. Knowing what your lawn shows over time helps set a steady mowing rhythm.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="How Often Grass Should Be Mowed">
+  <meta property="og:description" content="Mowing too often or not often enough both cause problems. Knowing what your lawn shows over time helps set a steady mowing rhythm.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,76 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>How Often Grass Should Be Mowed</h1>
 
-<h2>Why mowing frequency matters biologically</h2>
-<p>Mowing removes photosynthetic tissue. Every cut reduces the leaf area responsible for carbohydrate production.</p>
-<p>Grass survives mowing because growth points are located near the crown, but recovery depends on how much leaf area remains after each cut.</p>
-<p>Mowing frequency determines whether the plant maintains energy balance or enters repeated recovery mode.</p>
+<h2>Why mowing on a schedule rarely works</h2>
+<p>Most people start out mowing on a fixed schedule, like every Saturday or every other week. At first that feels organized, but over time the lawn starts sending mixed signals. Some weeks the grass barely grows, and other weeks it feels like it’s out of control.</p>
+<p>The lawn doesn’t follow the calendar. It reacts to conditions, which is why a rigid schedule eventually creates uneven results.</p>
 
-<h2>Growth rate, not time, sets mowing needs</h2>
-<p>Grass grows in response to temperature, moisture, and light. These factors change constantly.</p>
-<p>Rapid growth produces excess leaf tissue that can be removed without stress.</p>
-<p>Slow growth means each cut removes a higher percentage of the plant’s energy-producing surface.</p>
+<h2>What the lawn tells you between cuts</h2>
+<p>When grass is ready to be mowed, it starts looking uneven rather than just taller. You’ll notice certain areas leaning over or standing out above the rest of the yard. That’s usually the first sign it’s time.</p>
+<p>If the lawn still looks level and upright, mowing usually does more harm than good. Waiting until the yard shows unevenness keeps cuts cleaner.</p>
 
-<h2>Seasonal growth patterns</h2>
-<p>Spring often produces the fastest growth due to moderate temperatures and adequate moisture.</p>
-<p>Summer heat slows growth in cool-season grasses, increasing mowing stress.</p>
-<p>Warm-season grasses peak later, shifting mowing demand to hotter months.</p>
+<h2>Why some areas always seem ahead of the rest</h2>
+<p>Most lawns never grow evenly across the whole yard. Sections near water, sunlight, or shelter often take off faster than others. This makes the lawn look messy even when part of it is fine.</p>
+<p>These differences are normal and repeat themselves year after year. <a href="why-grass-grows-faster-in-some-areas.html">Why Grass Grows Faster in Some Areas</a> explains why those spots always lead the pack.</p>
 
-<h2>Carbohydrate storage and recovery</h2>
-<p>Grass stores energy in roots and crowns.</p>
-<p>Frequent severe cuts force the plant to draw down these reserves.</p>
-<p>When reserves fall too low, regrowth slows and thinning begins.</p>
+<h2>How mowing affects flattened or laid-over grass</h2>
+<p>After rain or heavy use, grass often lays flat instead of standing upright. Mowing at that point can leave behind uneven patches that look half-cut. The lawn appears rough even though it was just mowed.</p>
+<p>Letting grass dry and lift back up usually solves the problem. <a href="how-to-fix-flattened-grass.html">How to Fix Flattened Grass</a> shows how to restore an even look before cutting.</p>
 
-<h2>Mowing height interacts with frequency</h2>
-<p>Lower mowing heights reduce remaining leaf area.</p>
-<p>This requires more frequent mowing to avoid excessive removal.</p>
-<p>Higher mowing heights allow longer intervals without stressing the plant.</p>
+<h2>Why weather changes mowing frequency</h2>
+<p>Rainfall and temperature shifts directly change how fast the lawn grows. Wet stretches push growth quickly, while dry periods slow everything down. Mowing needs follow those changes.</p>
+<p>Trying to keep the same routine through different weather usually leads to overcutting or scalping. <a href="how-rainfall-patterns-affect-lawns.html">How Rainfall Patterns Affect Lawns</a> explains how these swings shape growth.</p>
 
-<h2>Weather-driven variability</h2>
-<p>Rain accelerates growth by increasing water availability and nutrient movement.</p>
-<p>Drought and heat suppress growth regardless of mowing habits.</p>
-<p>Fixed schedules ignore these shifts and increase stress risk.</p>
-
-<h2>Consequences of mowing too often</h2>
-<p>Repeated removal of young leaf tissue limits photosynthesis.</p>
-<p>Roots shrink in response to reduced energy supply.</p>
-<p>Stress tolerance declines over time.</p>
-
-<h2>Consequences of mowing too infrequently</h2>
-<p>Overgrown grass requires heavy cuts.</p>
-<p>Large leaf-area loss shocks the plant.</p>
-<p>Scalping becomes more likely, especially on uneven ground.</p>
-
-<h2>Interpreting mowing stress signals</h2>
-<p>Delayed regrowth indicates excessive frequency or severity.</p>
-<p>Clumping and uneven color suggest infrequent mowing.</p>
-<p>These symptoms reflect energy imbalance rather than blade height alone.</p>
-
-<h2>Conclusion</h2>
-<p>Mowing frequency should track growth rate, not habit.</p>
-<p>Healthy lawns adjust mowing timing as conditions change.</p>
+<h2>Finding a rhythm that works long term</h2>
+<p>Over time, most homeowners settle into a flexible rhythm instead of a strict plan. The mower comes out when the lawn looks uneven, not when the calendar says so. This approach keeps the yard looking steadier.</p>
+<p>Paying attention to how the lawn responds week to week leads to fewer problems and cleaner cuts. Consistency comes from observation, not rigid scheduling.</p>
   </main>
 
   <footer class="site-footer">
@@ -117,12 +80,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
