updated too short page

--- a/lawn-basics/how-short-is-too-short-to-cut-grass.html
+++ b/lawn-basics/how-short-is-too-short-to-cut-grass.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Short Is Too Short to Cut Grass</title>
-  <meta name="description" content="Grass is cut too short when leaf-area loss disrupts energy production, exposes crowns, and reduces root depth beyond recovery limits.">
+  <meta name="description" content="Cutting grass too short causes more problems than it solves. Knowing where the line is helps keep the lawn steady instead of stressed.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="How Short Is Too Short to Cut Grass">
-  <meta property="og:description" content="Grass is cut too short when leaf-area loss disrupts energy production, exposes crowns, and reduces root depth beyond recovery limits.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="How Short Is Too Short to Cut Grass">
+  <meta name="twitter:description" content="Cutting grass too short causes more problems than it solves. Knowing where the line is helps keep the lawn steady instead of stressed.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="How Short Is Too Short to Cut Grass">
+  <meta property="og:description" content="Cutting grass too short causes more problems than it solves. Knowing where the line is helps keep the lawn steady instead of stressed.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,76 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>How Short Is Too Short to Cut Grass</h1>
 
-<h2>Why cutting height affects survival</h2>
-<p>Grass relies on leaf blades to produce carbohydrates.</p>
-<p>Cutting height determines how much photosynthetic tissue remains after mowing.</p>
-<p>Too little remaining leaf area forces the plant into energy deficit.</p>
+<h2>Why cutting lower feels like the right move</h2>
+<p>Most people cut grass shorter because it looks cleaner right after mowing. The yard feels tidy, and it seems like it should stay that way longer. On the surface, it feels efficient.</p>
+<p>A few days later, the lawn often looks worse instead of better. Thin spots show up, color fades, and the yard starts looking stressed.</p>
 
-<h2>The role of the crown</h2>
-<p>The crown contains the growth point and connects leaves to roots.</p>
-<p>It sits near the soil surface and is vulnerable to heat and drying.</p>
-<p>Low cutting heights expose the crown to environmental stress.</p>
+<h2>What happens when grass is cut too low</h2>
+<p>When grass is taken down too far, it loses its ability to stay upright and even. The lawn looks scalped, especially in spots where the ground isn’t perfectly flat. Recovery takes longer than expected.</p>
+<p>This is when people start chasing fixes with watering or fertilizer. The real issue is usually the cut itself.</p>
 
-<h2>Leaf-area loss and carbohydrate collapse</h2>
-<p>Severe cuts remove stored energy capacity.</p>
-<p>The plant must redirect carbohydrates from roots to rebuild leaves.</p>
-<p>This weakens root systems and slows recovery.</p>
+<h2>Why slopes are usually the first problem areas</h2>
+<p>Sloped areas almost always get cut shorter than the rest of the yard. The mower rides lower on inclines, even when the deck height hasn’t changed. These spots show damage first.</p>
+<p>Repeated short cuts on slopes lead to thinning that never quite fills back in. <a href="how-slope-affects-grass-growth.html">How Slope Affects Grass Growth</a> explains why those areas struggle more than flat ground.</p>
 
-<h2>Root response to low mowing</h2>
-<p>Roots adjust to available energy.</p>
-<p>Reduced leaf area leads to reduced root mass.</p>
-<p>Shallow roots increase drought and heat sensitivity.</p>
+<h2>How short cuts slow long-term improvement</h2>
+<p>Grass that’s constantly cut too short spends more time trying to recover than fill in. Progress feels stalled, even during good growing weather. The lawn never quite looks settled.</p>
+<p>This is especially noticeable in newer lawns. <a href="how-long-new-grass-takes-to-establish.html">How Long New Grass Takes to Establish</a> shows why young grass needs extra margin.</p>
 
-<h2>Soil temperature amplification</h2>
-<p>Short grass allows more sunlight to reach soil.</p>
-<p>Soil temperatures rise, stressing roots.</p>
-<p>High root-zone temperatures reduce water uptake efficiency.</p>
+<h2>Why mowing lower doesn’t reduce mowing</h2>
+<p>Cutting lower rarely means mowing less. In many cases, it causes uneven growth that makes the lawn look messy sooner. The mower comes back out anyway.</p>
+<p>A higher cut keeps the lawn looking level longer. <a href="how-often-grass-should-be-mowed.html">How Often Grass Should Be Mowed</a> shows how height and timing work together.</p>
 
-<h2>Water loss and evaporation</h2>
-<p>Low turf dries faster due to increased airflow.</p>
-<p>Evaporation accelerates water stress.</p>
-<p>Irrigation demand rises as cutting height drops.</p>
-
-<h2>Grass-type tolerance differences</h2>
-<p>Some grasses evolved for low cutting.</p>
-<p>Others rely on taller leaf structure for survival.</p>
-<p>Ignoring species tolerance accelerates decline.</p>
-
-<h2>Cumulative damage from repeated low cuts</h2>
-<p>Single low cuts cause stress.</p>
-<p>Repeated low cuts prevent full recovery.</p>
-<p>Thinning and bare spots develop gradually.</p>
-
-<h2>Recognizing the biological limit</h2>
-<p>Grass is cut too short when regrowth slows noticeably.</p>
-<p>Color loss and thinning indicate energy failure.</p>
-<p>The limit is defined by recovery capacity, not appearance.</p>
-
-<h2>Conclusion</h2>
-<p>Cutting too short undermines root health before visible decline.</p>
-<p>Sustainable height preserves energy balance and resilience.</p>
+<h2>Finding a height the lawn can live with</h2>
+<p>The right height is the one that keeps the lawn even between cuts. It doesn’t scalp slopes, flatten after rain, or fade during warm stretches. The yard holds its shape.</p>
+<p>When grass is left with enough height, it becomes easier to maintain instead of harder. The lawn stops fighting back.</p>
   </main>
 
   <footer class="site-footer">
@@ -117,12 +80,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
